--- a/_posts/2025-10-22-todo.md
+++ b/_posts/2025-10-22-todo.md
@@ -6,4 +6,4 @@ tags: [TODO]
 description: "TODO Notes."
 ---
 
-**[GitHub Pages documentation](https://docs.github.com/en/pages)**
+**[GitHub Pages documentation](https://docs.github.com/en/pages){:target="_blank"}**
