Change image format from PNG to WEBP

--- a/_posts/2025-10-22-todo.md
+++ b/_posts/2025-10-22-todo.md
@@ -6,7 +6,7 @@ author: technical_notes
 date: 2025-10-22 04:00:00 +0530
 categories: [Notes, TODO]
 tags: [TODO]
-image: /assets/img/posts/todo-list.png
+image: /assets/img/posts/todo-list.webp
 toc: false
 math: false
 mermaid: false
